iterator.increment crashes in try/except block when it can't increment any further #37092

Closed
opened 2013-10-15 16:37:52 +02:00 by Folkert de Vries · 7 comments

%%%-- System information --

Windows 7 64 bits
revision 60773 and 2.68 official release.

- Blender version with error, and version that worked ---

error in revision 60773 and 2.68 official release.
I don't think it ever worked.

- Short description of error ---

When an iterator is at its end (which means iterator.is_end == True) and is incremented again in an try/except clause, the RuntimeError this causes seems to be improperly handled. Referencing the object after the the except clause, that contains a return statement, so the remainder of the code shouldn't be executed, causes a crash.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

try to render an image in the attached blend file.
more generically, increment an iterator that is pointing to its final object in a try block, and refference it after the except clause, which contains a return statement.

%%%

%%%-- System information -- Windows 7 64 bits revision 60773 and 2.68 official release. - Blender version with error, and version that worked --- error in revision 60773 and 2.68 official release. I don't think it ever worked. - Short description of error --- When an iterator is at its end (which means iterator.is_end == True) and is incremented again in an try/except clause, the RuntimeError this causes seems to be improperly handled. Referencing the object after the the except clause, that contains a return statement, so the remainder of the code shouldn't be executed, causes a crash. - Steps for others to reproduce the error (preferably based on attached .blend file) --- try to render an image in the attached blend file. more generically, increment an iterator that is pointing to its final object in a try block, and refference it after the except clause, which contains a return statement. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%The problem seems to be more generic; it also crashes when using an if/else clause. I attachted another .py file that uses an if/else clause and causes a crash.
%%%

%%%The problem seems to be more generic; it also crashes when using an if/else clause. I attachted another .py file that uses an if/else clause and causes a crash. %%%
Author
Member

%%%updated file:
http://www.pasteall.org/46558/python%%%

%%%updated file: http://www.pasteall.org/46558/python%%%

%%%Tamito, can you please check on this issue? Thanks!%%%

%%%Tamito, can you please check on this issue? Thanks!%%%

%%%Thanks a lot for the bug report. Fix committed in trunk revision 61233. Further test would be much appreciated.%%%

%%%Thanks a lot for the bug report. Fix committed in trunk revision 61233. Further test would be much appreciated.%%%

%%%Closing then (easy to reopen if need arises). :)%%%

%%%Closing then (easy to reopen if need arises). :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37092
No description provided.