Fix #37092 and #37381: crashes in the .object() method of Freestyle iterators. Now the method checks if the iterator is at the end, and returns None if that is the case.