source/blender/freestyle/intern/python/Iterator/BPy_CurvePointIterator.cpp
@@ -97,6 +97,8 @@ PyDoc_STRVAR(CurvePointIterator_object_doc,
 
 static PyObject *CurvePointIterator_object_get(BPy_CurvePointIterator *self, void *UNUSED(closure))
 {
+	if (self->cp_it->isEnd())
+		Py_RETURN_NONE;
 	return BPy_CurvePoint_from_CurvePoint(self->cp_it->operator*());
 }
 
