source/blender/freestyle/intern/python/Iterator/BPy_Interface0DIterator.cpp
@@ -123,6 +123,8 @@ PyDoc_STRVAR(Interface0DIterator_object_doc,
 
 static PyObject *Interface0DIterator_object_get(BPy_Interface0DIterator *self, void *UNUSED(closure))
 {
+	if (self->if0D_it->isEnd())
+		Py_RETURN_NONE;
 	return Any_BPy_Interface0D_from_Interface0D(self->if0D_it->operator*());
 }
 
